# scc-package-search

./: .gitignore  Cargo.toml  README.md  scc-package-search.yaml
.openapi-generator/: FILES
docs/: Package.md  PackagesApi.md  PackagesGet200Response.md  Product.md  ProductsGet200Response.md
src/: main.rs
src/apis/: configuration.rs  mod.rs  packages_api.rs
src/models/: _packages_get_200_response.rs  _products_get_200_response.rs  mod.rs  package.rs  product.rs
